--- a/index.html
+++ b/index.html
@@ -6,56 +6,85 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gradients</title>
   <style>
-    html,
-    body {
+    body,
+    html {
       height: 100%;
       margin: 0;
-      overflow: hidden;
+      overflow: hidden
+    }
+
+    body {
+      color: #555;
     }
 
     label {
-      display: block;
+      display: block
     }
 
     input {
-      cursor: pointer;
+      cursor: pointer
     }
 
+    #wraoer,
     .colors {
       display: flex;
-      min-width: 100%;
+      min-width: 100%
     }
 
     #wraoer {
-      display: flex;
+      background: #fff;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
       align-items: center;
       justify-content: center;
       flex-flow: column;
-      padding: 24px;
+      padding: 4px;
       margin: 24px auto;
-      width: max-content;
       min-width: 300px;
-      background: rgba(238, 238, 238, 0.5);
       box-shadow: 0 0 10px 0 #000;
       border-radius: 4px;
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
     }
 
-    input[type="color"] {
-      min-width: 50%;
+    input[type=color] {
       display: flex;
       height: 40px;
       padding: 0;
+      border: 4px solid #eee;
+      box-sizing: border-box;
+      width: 100%;
+    }
+
+    .color {
+      min-width: 50%;
+      text-align: center;
+      font-size: 10px;
+      text-transform: lowercase;
     }
 
     .radios {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      text-align: right;
+      grid-template-columns: repeat(4, 1fr);
+      padding: 8px;
+      text-align: right
     }
 
+    .inline {
+      display: flex;
+      background: #fff;
+      border: 4px solid #eee;
+      width: 100%;
+      box-sizing: border-box;
+      flex-flow: column;
+    }
+
+    #wraoer,
     .radios input[type=radio] {
-      width: max-content;
+      width: max-content
     }
 
     #wraoer input[type=text] {
@@ -63,82 +92,107 @@
       cursor: pointer;
       display: block;
       text-align: center;
-    }
-
-    #color-out {
       appearance: none;
       -moz-appearance: none;
-      background: 0;
       border: 0;
+      box-sizing: border-box;
+      box-shadow: 0 0 2px inset;
     }
 
     .seper {
-      border: 4px solid #aaa;
-      text-align: center;
+      border: 4px solid #eee;
+      border-top-width: 0;
+      text-align: center
     }
 
     .grids {
-      background: #eee;
+      background: #fafafa;
       display: block;
-      width: 100%;
+      width: 100%
     }
 
     .button {
-      box-shadow: inset 0px 1px 0px 0px #a4e271;
+      box-shadow: inset 0 1px 0 0 #a4e271;
       background: linear-gradient(to bottom, #89c403 5%, #77a809 100%);
       background-color: #89c403;
-      border-radius: 6px;
       border: 1px solid #74b807;
       display: inline-block;
       cursor: pointer;
-      color: #ffffff;
+      color: #fff;
       font-family: Arial;
       font-size: 15px;
-      font-weight: bold;
+      font-weight: 700;
       padding: 6px 24px;
       text-decoration: none;
-      text-shadow: 0px 1px 0px #528009;
+      text-shadow: 0 1px 0 #528009
     }
 
     .button:hover {
       background: linear-gradient(to bottom, #77a809 5%, #89c403 100%);
-      background-color: #77a809;
+      background-color: #77a809
     }
 
     .button:active {
       position: relative;
-      top: 1px;
+      top: 1px
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 18px;
+      color: #333;
+      padding-bottom: 4px;
+      text-shadow: 0 1px 0 #CCCCCC, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
+    }
+
+    .colors label {
+      position: relative;
+      display: inline;
     }
   </style>
 </head>
 
 <body>
-
   <div id="wraoer">
+    <h1>&darr;Gradient&darr;</h1>
     <div class="colors">
-      <input type="color" value="#000000" id="color1">
-      <input type="color" value="#eeeeee" id="color2">
+      <div class="color">
+        <label for="color1">Color1</label>
+        <input type="color" value="#8100B7" id="color1">
+      </div>
+      <div class="color">
+        <label for="color2">Color2</label>
+        <input type="color" value="#BA9800" id="color2">
+      </div>
     </div>
     <div class="grids">
       <div class="seper">
-        <div class="radios">
-          <label for="top">top</label>
-          <input id="top" type="radio" value="0deg" name="direction" checked>
-          <label for="bottom">bottom</label>
-          <input id="bottom" type="radio" value="180deg" name="direction">
-          <label for="left">left</label>
-          <input id="left" type="radio" value="270deg" name="direction">
-          <label for="right">right</label>
-          <input id="right" type="radio" value="90deg" name="direction">
-        </div>
+        <fieldset>
+          <legend>Gradient position</legend>
+          <div class="radios">
+            <label for="top">top</label>
+            <input id="top" type="radio" value="0deg" name="direction" checked>
+            <label for="bottom">bottom</label>
+            <input id="bottom" type="radio" value="180deg" name="direction">
+            <label for="left">left</label>
+            <input id="left" type="radio" value="270deg" name="direction">
+            <label for="right">right</label>
+            <input id="right" type="radio" value="90deg" name="direction">
+          </div>
+        </fieldset>
+
       </div>
       <div class="seper">
         <input id="ranges" type="range" value="0" min="0" max="360">
         <label for="ranges">0</label>
       </div>
     </div>
-    <input id="color-out" type="text"><button class="button" id="copy-text">&#128203; COPY</button>
+    <div class="inline">
+      <label for="color-out" class="color">output</label>
+      <input id="color-out" type="text"><button class="button" id="copy-text">&#128203; COPY</button>
+    </div>
   </div>
   <script src="./js/main.js"></script>
 </body>
+
 </html>
